samples/_failures_safe/1761694838_5d1ae4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_997b31c7.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_997b31c7.c:160:17: error: expected expression at end of input
  160 |                 return
      |                 ^~~~~~
./samples/SAFE/__tmp_997b31c7.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_997b31c7.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_997b31c7.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_997b31c7.c:160:17: error: expected declaration or statement at end of input
